@@ -38,7 +38,12 @@ class ActionListHandler extends HandlerBase
 	{
 		if("actions.dtd".equals(systemId))
 		{
-			try
+			// this will result in a slight speed up, since we
+			// don't need to read the DTD anyway, as AElfred is
+			// non-validating
+			return new StringReader("<!-- -->");
+
+			/* try
 			{
 				return new BufferedReader(new InputStreamReader(
 					getClass().getResourceAsStream("actions.dtd")));
@@ -48,7 +53,7 @@ class ActionListHandler extends HandlerBase
 				Log.log(Log.ERROR,this,"Error while opening"
 					+ " actions.dtd:");
 				Log.log(Log.ERROR,this,e);
-			}
+			} */
 		}
 
 		return null;
