@@ -147,7 +147,12 @@ public class DockableWindowManager extends JPanel
 		{
 			if("dockables.dtd".equals(systemId))
 			{
-				try
+				// this will result in a slight speed up, since we
+				// don't need to read the DTD anyway, as AElfred is
+				// non-validating
+				return new StringReader("<!-- -->");
+
+				/* try
 				{
 					return new BufferedReader(new InputStreamReader(
 						getClass().getResourceAsStream
@@ -158,7 +163,7 @@ public class DockableWindowManager extends JPanel
 					Log.log(Log.ERROR,this,"Error while opening"
 						+ " dockables.dtd:");
 					Log.log(Log.ERROR,this,e);
-				}
+				} */
 			}
 
 			return null;
